mandatory updated again

--- a/Mandatory.html
+++ b/Mandatory.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title>AIT PUNE</title>
-    <link rel="stylesheet" href="/mandatory/mandate.css">
+    <link rel="stylesheet" href="mandate.css">
     <link rel="stylesheet" href="trans.css">
 </head>
 <body>
@@ -88,11 +88,11 @@
             <div class="jd_table">
                 <ul>
                 <p>Mandatory Information</p>
-                <!-- <a href="#" id="link" onclick="loadContent('/mandatory/info.html', event)" style="text-decoration: none;">Mandatory Information</a> -->
-                <a href="#" id="link" onclick="loadContent('/mandatory/sr.html', event)" style="text-decoration: none;">Student Related</a>
-                <a href="#" id="link" onclick="loadContent('/mandatory/staff.html', event)" style="text-decoration: none;">Staff Related</a>
-                <a href="#" id="link"  onclick="loadContent('/mandatory/res.html', event)" style="text-decoration: none;">Resources</a>
-                <a href="#" id="link" onclick="loadContent('/mandatory/awes.html', event)" style="text-decoration: none;">Others</a>
+                <!-- <a href="#" id="link" onclick="loadContent('./mandatory/info.html', event)" style="text-decoration: none;">Mandatory Information</a> -->
+                <a href="#" id="link" onclick="loadContent('./mandatory/sr.html', event)" style="text-decoration: none;">Student Related</a>
+                <a href="#" id="link" onclick="loadContent('./mandatory/staff.html', event)" style="text-decoration: none;">Staff Related</a>
+                <a href="#" id="link"  onclick="loadContent('./mandatory/res.html', event)" style="text-decoration: none;">Resources</a>
+                <a href="#" id="link" onclick="loadContent('./mandatory/awes.html', event)" style="text-decoration: none;">Others</a>
                 </ul>
             </div>
             
