--- a/mandatory/info.html
+++ b/mandatory/info.html
@@ -3,11 +3,11 @@
     <div class="jd_table">
         <ul>
         <p>Mandatory Information</p>
-        <!-- <a href="#" id="link" onclick="loadContent('/mandatory/info.html', event)" style="text-decoration: none;">Mandatory Information</a> -->
-        <a href="#" id="link" onclick="loadContent('/mandatory/sr.html', event)" style="text-decoration: none;">Student Related</a>
-        <a href="#" id="link" onclick="loadContent('/mandatory/staff.html', event)" style="text-decoration: none;">Staff Related</a>
-        <a href="#" id="link"  onclick="loadContent('/mandatory/res.html', event)" style="text-decoration: none;">Resources</a>
-        <a href="#" id="link" onclick="loadContent('/mandatory/awes.html', event)" style="text-decoration: none;">Others</a>
+        <!-- <a href="#" id="link" onclick="loadContent('./mandatory/info.html', event)" style="text-decoration: none;">Mandatory Information</a> -->
+        <a href="#" id="link" onclick="loadContent('./mandatory/sr.html', event)" style="text-decoration: none;">Student Related</a>
+        <a href="#" id="link" onclick="loadContent('./mandatory/staff.html', event)" style="text-decoration: none;">Staff Related</a>
+        <a href="#" id="link"  onclick="loadContent('./mandatory/res.html', event)" style="text-decoration: none;">Resources</a>
+        <a href="#" id="link" onclick="loadContent('./mandatory/awes.html', event)" style="text-decoration: none;">Others</a>
         </ul>
     </div>
     
