--- a/mandatory/awes.html
+++ b/mandatory/awes.html
@@ -2,11 +2,11 @@
     <div class="dir">
     <div class="jd_table">
         <ul>
-            <a href="#" id="link" onclick="loadContent('/mandatory/info.html', event)" style="text-decoration: none;">Mandatory Information</a>
-            <a href="#" id="link" onclick="loadContent('/mandatory/sr.html', event)" style="text-decoration: none;">Student Related</a>
-            <a href="#" id="link" onclick="loadContent('/mandatory/staff.html', event)" style="text-decoration: none;">Staff Related</a>
-            <a href="#" id="link"  onclick="loadContent('/mandatory/res.html', event)" style="text-decoration: none;">Resources</a>
-            <!-- <a href="#" id="link" onclick="loadContent('/mandatory/awes.html', event)" style="text-decoration: none;">Others</a> -->
+            <a href="#" id="link" onclick="loadContent('./mandatory/info.html', event)" style="text-decoration: none;">Mandatory Information</a>
+            <a href="#" id="link" onclick="loadContent('./mandatory/sr.html', event)" style="text-decoration: none;">Student Related</a>
+            <a href="#" id="link" onclick="loadContent('./mandatory/staff.html', event)" style="text-decoration: none;">Staff Related</a>
+            <a href="#" id="link"  onclick="loadContent('./mandatory/res.html', event)" style="text-decoration: none;">Resources</a>
+            <!-- <a href="#" id="link" onclick="loadContent('./mandatory/awes.html', event)" style="text-decoration: none;">Others</a> -->
             <p>Others</p>
         </ul>
     </div>
@@ -14,7 +14,7 @@
     <div class="director_content">
         <h2 class="director_ok" style="margin-bottom: 30px;">Others</h2>
         
-            <div class="para_containi" style="color: black; font-size: 1rem;" >
+            <div class="para_containi" style="color: black; font-size: 1rem;">
                 <p>AWES Rule and Regulations</p>
                 <ul><li><a href="rules/BLUE BOOK - AWES Rules And Regulations 2009.pdf" target="_blank">AWES Rules and Regulations for Army Colleges/ Institutions 2009</a></li></ul>
                 <p>Insurance Cover for Staff and Students</p>
@@ -34,7 +34,9 @@
                     <li><a href="rules/SOP for open Merit.pdf" target="_blank">SOP For Award of Open Merit Scholarship to Students of AIT(Jul 2021)</a></li>
                       <li><a href="rules/SOP - Merit Cum Means Scholarship.pdf" target="_blank">SOP For Award of Merit cum Means Scholarship to Students of AIT(Jul 2021)</a></li></ul>
                       <p>Examination Related</p>
-                      <ul><li><a href="Notices/SOPforexamination.pdf">SOP for Examination </a></li></ul>
+                      <li><a href="Notices/SOPforexamination.pdf">SOP for Examination </a></li>
+                </u>
+                <p></p>
             </div>
         </div>
     </div>
