--- a/mandatory/sr.html
+++ b/mandatory/sr.html
@@ -2,12 +2,12 @@
     <div class="dir">
     <div class="jd_table">
         <ul>
-            <a href="#" id="link" onclick="loadContent('/mandatory/info.html', event)" style="text-decoration: none;">Mandatory Information</a>
-            <!-- <a href="#" id="link" onclick="loadContent('/mandatory/sr.html', event)" style="text-decoration: none;">Student Related</a> -->
+            <a href="#" id="link" onclick="loadContent('./mandatory/info.html', event)" style="text-decoration: none;">Mandatory Information</a>
+            <!-- <a href="#" id="link" onclick="loadContent('./mandatory/sr.html', event)" style="text-decoration: none;">Student Related</a> -->
             <p>Student Related</p>
-            <a href="#" id="link" onclick="loadContent('/mandatory/staff.html', event)" style="text-decoration: none;">Staff Related</a>
-            <a href="#" id="link"  onclick="loadContent('/mandatory/res.html', event)" style="text-decoration: none;">Resources</a>
-            <a href="#" id="link" onclick="loadContent('/mandatory/awes.html', event)" style="text-decoration: none;">Others</a>
+            <a href="#" id="link" onclick="loadContent('./mandatory/staff.html', event)" style="text-decoration: none;">Staff Related</a>
+            <a href="#" id="link"  onclick="loadContent('./mandatory/res.html', event)" style="text-decoration: none;">Resources</a>
+            <a href="#" id="link" onclick="loadContent('./mandatory/awes.html', event)" style="text-decoration: none;">Others</a>
         </ul>
     </div>
     
