--- a/mandatory/studentForms.html
+++ b/mandatory/studentForms.html
@@ -2,12 +2,10 @@
     <div class="dir">
     <div class="jd_table">
         <ul>
-            <a href="#" id="link" onclick="loadContent('./mandatory/info.html', event)" style="text-decoration: none;">Mandatory Information</a>
-            <a href="#" id="link" onclick="loadContent('./mandatory/sr.html', event)" style="text-decoration: none;">Student Related</a>
-            <!-- <a href="#" id="link" onclick="loadContent('./mandatory/staff.html', event)" style="text-decoration: none;">Staff Related</a> -->
-            <p>Staff Related</p>
-            <a href="#" id="link"  onclick="loadContent('./mandatory/res.html', event)" style="text-decoration: none;">Resources</a>
-            <a href="#" id="link" onclick="loadContent('./mandatory/awes.html', event)" style="text-decoration: none;">Others</a>
+            <p>Student Related Documents Format</p>
+                <!-- <a href="#" id="link" onclick="loadContent('./mandatory/info.html', event)" style="text-decoration: none;">Mandatory Information</a> -->
+                <a href="#" id="link" onclick="loadContent('./mandatory/facultyForms.html', event)" style="text-decoration: none;">Formats for Faculty</a>
+                <a href="#" id="link" onclick="loadContent('./mandatory/allForms.html', event)" style="text-decoration: none;">Formats for all</a>
         </ul>
     </div>
     
