--- a/student/Scholarship/sd-ait.html
+++ b/student/Scholarship/sd-ait.html
@@ -23,8 +23,8 @@
         </ul>
     </div>
 
-    <div class="scholar">
-        <h2 class="scholar_sop" style="margin-bottom: 40px;">Standard Operating Procedure</h2>
+    <div class="director_content">
+        <h2 class="director_ok">Standard Operating Procedure</h2>
         <div class="sop2">
                 <div class="industrial_visit_links">
                    
