--- a/student/Scholarship/sd-loan.html
+++ b/student/Scholarship/sd-loan.html
@@ -24,8 +24,8 @@
         </ul>
     </div>
 
-    <div class="scholar">
-        <h2 class="scholar_sop" style="margin-bottom: 40px;">Education/ Scholar Loan</h2>
+    <div class="director_content">
+        <h2 class="director_ok" style="margin-bottom: 40px;">Education/ Scholar Loan</h2>
         <div class="sop2">
             <div class="loan_content2">
                     <div class="loan_arrow">
