--- a/student/achievement.html
+++ b/student/achievement.html
@@ -19,7 +19,7 @@
 
     <div class="director_content">
         <h2 class="director_ok">Achievements</h2>
-        <table id="myTable" style="margin-left: 1.88rem;">
+        <table id="myTable" class="myTable">
             <thead>
                 <td class="head" width="15%">Date </td>
                 <td class="head" width="85%">Description</td>
@@ -137,6 +137,7 @@
                 </tr>
             </tbody>
         </table>
+        
     </div>
 
 </div>
