--- a/student/uni-toppers.html
+++ b/student/uni-toppers.html
@@ -32,7 +32,7 @@
                     <td>19-20</td>
                     <td>Divya Singh (2015)</td>
                     <td>TE</td>
-                    <td>E7TC</td>
+                    <td>ENTC</td>
                     <td>IX</td>
                 </tr>
                 <tr id="row">
