student.html update
the click box was typed two times in code removed one

--- a/student.html
+++ b/student.html
@@ -80,8 +80,7 @@
         </div>
     </div>
 
-    <br><br><br>
-    <div id="box_hide" onclick="change_view()"></div>   <!-- floating - paste this div anywhere in html body -->
+    <br><br><br>   <!-- floating - paste this div anywhere in html body -->
     <div id="contentContainer" class="content-transition">
 
         <div class="middle_bar">
