--- a/student.html
+++ b/student.html
@@ -80,7 +80,10 @@
         </div>
     </div>
 
-    <br><br><br>   <!-- floating - paste this div anywhere in html body -->
+    <br><br><br>   
+
+    <div id="box_hide" onclick="change_view()"></div>
+
     <div id="contentContainer" class="content-transition">
 
         <div class="middle_bar">
@@ -121,7 +124,7 @@
                 </div>
             </div>
         </div>
-        <div id="box_hide" onclick="change_view()">Menu</div>
+
 
     </div>
     <script src="script.js"></script>
