--- a/Mandatory.html
+++ b/Mandatory.html
@@ -104,47 +104,47 @@
                             <li><strong>College Development Committee Meeting Minutes</strong>
 
                                 <ul>
-                                     <li><a href="rules/MOM CDC/Minutes of Meeting CDC - 8 Dec 2023.pdf" target="_blank">8 Dec 2023</a></li>
-                                   <li><a href="rules/MOM CDC/Minutes of Meeting CDC - 30 Jun 2023.pdf" target="_blank">30 Jun 2023</a></li>
-                                    <li><a href="rules/CDC Meeting Minutes 6 Dec 2022.pdf" target="_blank">06 Dec 2022</a></li>
-                                    <li><a href="rules/CDC Meeting Minutes 12 Mar 2022.pdf" target="_blank">12 Mar 2022</a></li>
-                                    <li><a href="rules/Minutes of CDC Meeting 28 Jul 2021 Online Mode.pdf" target="_blank">28 Jul 2021 Online Mode</a></li>
-                                    <li><a href="rules/CDC Minutes 09 Dec 2020.pdf" target="_blank">09 Dec 2020 </a></li>
-                                    <li><a href="rules/CDC Meeting Minutes 26 Dec 2019.pdf" target="_blank">26 Dec 2019 </a></li>
-                                    <li><a href="rules/CDC Minutes 21 Aug 2019.pdf" target="_blank">21 Aug 2019</a></li>
-                                    <li><a href="rules/CDC Minutes 15 Apr 2019.pdf" target="_blank">15 Apr 2019</a></li>
-                                    <li><a href="rules/CDC Meeting Minutes 10 Nov 2018.pdf" target="_blank">10 Nov 2018 </a></li>
-                                    <li><a href="rules/CDC Meeting Minutes 18jul2018.pdf" target="_blank">18 Jul 2018 </a></li>
-                                    <li><a href="rules/Minutes CDC 30 Dec 2017.pdf" target="_blank">30 Dec 2017 </a></li>
-                                    <li><a href="rules/CDC Minutes PDF.pdf" target="_blank">18 Aug 2017 </a></li>
+                                     <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FMinutes%20of%20Meeting%20CDC%20-%208%20Dec%202023.pdf?alt=media&token=9f04bc67-8e01-4be4-9f02-638d98a45dea" target="_blank">8 Dec 2023</a></li>
+                                   <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FMinutes%20of%20Meeting%20CDC%20-%2030%20Jun%202023.pdf?alt=media&token=9584cef7-70c7-4a92-99cb-c89e48423293" target="_blank">30 Jun 2023</a></li>
+                                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FCDC%20Meeting%20Minutes%206%20Dec%202022.pdf?alt=media&token=46e91eb4-e0e6-4137-9169-eb5ddc403033" target="_blank">06 Dec 2022</a></li>
+                                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FCDC%20Meeting%20Minutes%2012%20Mar%202022.pdf?alt=media&token=c32054fd-d924-4c9c-9cfa-950c63e205e9" target="_blank">12 Mar 2022</a></li>
+                                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FMinutes%20of%20CDC%20Meeting%2028%20Jul%202021%20Online%20Mode.pdf?alt=media&token=8f2bed9b-0d4d-4a73-901d-6bd1bd669949" target="_blank">28 Jul 2021 Online Mode</a></li>
+                                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FCDC%20Minutes%2009%20Dec%202020.pdf?alt=media&token=d98ca52c-b207-44e2-8aea-0121fab7c270" target="_blank">09 Dec 2020 </a></li>
+                                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FCDC%20Meeting%20Minutes%2026%20Dec%202019.pdf?alt=media&token=dd6d1b6d-7467-4e87-ab53-fd2c69b30c72" target="_blank">26 Dec 2019 </a></li>
+                                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FCDC%20Minutes%2021%20Aug%202019.pdf?alt=media&token=0cafca63-6545-4f77-bab8-db4665b05128" target="_blank">21 Aug 2019</a></li>
+                                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FCDC%20Minutes%2015%20Apr%202019.pdf?alt=media&token=b5a62481-b48e-4b13-9c4e-61364d52c8bc" target="_blank">15 Apr 2019</a></li>
+                                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FCDC%20Meeting%20Minutes%2010%20Nov%202018.pdf?alt=media&token=02456fdd-8715-4bc9-9e7d-f5acfae9b222" target="_blank">10 Nov 2018 </a></li>
+                                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FCDC%20Meeting%20Minutes%2018jul2018.pdf?alt=media&token=00ddf0e0-3f72-476e-adda-b6cd74072843" target="_blank">18 Jul 2018 </a></li>
+                                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FMinutes%20CDC%2030%20Dec%202017.pdf?alt=media&token=b0ec22d6-bc65-431f-b969-08b201acc4f4" target="_blank">30 Dec 2017 </a></li>
+                                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FCDC%20Minutes%20PDF.pdf?alt=media&token=84b6e0d9-a6f8-44b3-8a06-e3d6fa58dc9c" target="_blank">18 Aug 2017 </a></li>
                                 </ul>
                             </li>
                             <li><strong>Audited Statements</strong>
                                 <ul>
-                                    <li><a href="rules/auditreport/Audit Report FY 2022-23.PDF" target="_blank">2022-23</a></li>
-                                    <li><a href="rules/auditreport/Audit Report FY 2021-22.PDF" target="_blank">2021-22</a></li>
-                                    <li><a href="rules/auditreport/Audit Report FY 2020-21.PDF" target="_blank">2020-21</a></li>
-                                    <li><a href="rules/auditreport/Audit Report FY 2019-20.PDF" target="_blank">2019-20</a></li>
-                                    <li><a href="rules/auditreport/Audit Report FY 2018-19.PDF" target="_blank">2018-19</a></li>
-                                    <li><a href="rules/auditreport/Audit Report FY 2017-18.PDF" target="_blank">2017-18</a></li>
-                                    <li><a href="rules/auditreport/Audit Report FY 2016-17.PDF" target="_blank">2016-17</a></li>
-                                    <li><a href="rules/auditreport/Audit Report FY 2015-16.PDF" target="_blank">2015-16</a></li>
+                                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FAudit%20Report%20FY%202022-23.pdf?alt=media&token=87a01b16-56b5-4493-bc51-536e25b45a51" target="_blank">2022-23</a></li>
+                                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FAudit%20Report%20FY%202021-22.pdf?alt=media&token=a84fff4c-4562-4f6a-b8e7-8c7c9d611174" target="_blank">2021-22</a></li>
+                                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FAudit%20Report%20FY%202020-21.pdf?alt=media&token=1cf40c6c-2f5f-4465-990c-6ca1f6cc740b" target="_blank">2020-21</a></li>
+                                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FAudit%20Report%20FY%202019-20.pdf?alt=media&token=42981bb4-6491-46ff-9bdc-c17a1995b984" target="_blank">2019-20</a></li>
+                                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FAudit%20Report%20FY%202018-19.pdf?alt=media&token=52da0654-9471-48a2-8de9-b331b414e76e" target="_blank">2018-19</a></li>
+                                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FAudit%20Report%20FY%202017-18.pdf?alt=media&token=215fc6e2-4ed8-4b66-898b-ccd1cb5a7018" target="_blank">2017-18</a></li>
+                                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FAudit%20Report%20FY%202016-17.pdf?alt=media&token=69114c09-7ccb-4c2d-8111-f736b1c9ccb9" target="_blank">2016-17</a></li>
+                                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FAudit%20Report%20FY%202015-16.pdf?alt=media&token=65a6070d-381c-493e-9c78-18be1df49fd0" target="_blank">2015-16</a></li>
                                 </ul>
                             </li>
                             <li><strong>Minutes of the Governing Body Meeting </strong>
                                 <ul>
-                                     <li><a href="rules/GBM 23 Sep 2022.pdf" target="_blank">23 Sep 2022</a></li>
-                                    <li><a href="rules/GBM 17 Jun 21.pdf" target="_blank">17 Jun 2021</a></li>
-                                    <li><a href="rules/GBM 24 July 2019.pdf" target="_blank">24 July 2019</a></li>
-                                    <li><a href="rules/GBM 21 Apr 2018.pdf" target="_blank">21 Apr 2018</a></li>
+                                     <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FGBM%2023%20Sep%202022.pdf?alt=media&token=a1eb7e09-186c-4f48-bdf3-41cf5aed2c9b" target="_blank">23 Sep 2022</a></li>
+                                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FGBM%2017%20Jun%2021.pdf?alt=media&token=799c4d95-40da-4138-99c3-8a0876f9ecf4" target="_blank">17 Jun 2021</a></li>
+                                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FGBM%2024%20July%202019.pdf?alt=media&token=af14ee0c-13bb-4f7d-b3df-9027460cf0ed" target="_blank">24 July 2019</a></li>
+                                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FGBM%2021%20Apr%202018.pdf?alt=media&token=cc5264b1-9479-405c-a80e-ed75e528c8b8" target="_blank">21 Apr 2018</a></li>
                                 </ul>
                             </li>
                             <li><a href="https://www.aitpune.com/AICTE-Approved-Reports.aspx" target="_blank"><strong>AICTE Ext of Approval Reports from 1994 to 2023 </strong></a></li>
                             <li><a href="https://www.aitpune.com/NAACReports.aspx" target="_blank"><strong>AQAR of IQAC - Minutes of IQAC and NAAC Reports</strong> </a></li>
-                            <li><a href="Documents/AIT Growth Plan 2015-20.pdf" target="_blank">AIT Five Year Growth Plan 2015-20</a></li>
-                            <li><a href="aitgrowthplan.pdf" target="_blank">AIT Growth Plan 2013-2023 (updated on Aug 2014)</a>	</li>
+                            <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FAIT%20Growth%20Plan%202015-20.pdf?alt=media&token=23184a0d-b2e1-4a48-839e-b254b57757d1" target="_blank">AIT Five Year Growth Plan 2015-20</a></li>
+                            <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2Faitgrowthplan.pdf?alt=media&token=21905458-b7e9-4b1e-a250-85753b5cebb3" target="_blank">AIT Growth Plan 2013-2023 (updated on Aug 2014)</a>	</li>
 
-                            <li><a href="Notices/AITPP-2011-20.pdf" target="_blank">AIT Perspective Plan:2011-20</a>	</li>
+                            <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-INFORMATION%2FAITPP-2011-20.pdf?alt=media&token=5857bad1-3da8-48a3-a357-8002e3ae6e13" target="_blank">AIT Perspective Plan:2011-20</a>	</li>
                             <!--<li><a href="Notices/aitpolicy.pdf" target="_blank">AWES Rules and Regulations for Army Colleges/Institutions 2009	</a></li>-->
                         </ul>
                     </div>
