--- a/mandatory/awes.html
+++ b/mandatory/awes.html
@@ -16,26 +16,25 @@
         
             <div class="para_containi" style="color: black; font-size: 1rem;">
                 <p>AWES Rule and Regulations</p>
-                <ul><li><a href="rules/BLUE BOOK - AWES Rules And Regulations 2009.pdf" target="_blank">AWES Rules and Regulations for Army Colleges/ Institutions 2009</a></li></ul>
+                <ul><li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-RULES%2FBLUE%20BOOK%20-%20AWES%20Rules%20And%20Regulations%202009.pdf?alt=media&token=5bb844f7-e4d7-4436-baad-8cc7465f2e80" target="_blank">AWES Rules and Regulations for Army Colleges/ Institutions 2009</a></li></ul>
                 <p>Insurance Cover for Staff and Students</p>
                 <ul>
-                    <li><a href="rules/groupinsurance/AWES Policy Copy with letter.pdf" target="_blank">Group Accident Insurance Cover to Student and Employees(Aug 2023)</a></li>
-                    <li><a href="rules/groupinsurance/Policy letter 2023-24.pdf" target="_blank">Group Accident Insurance Cover Policy Letter(Aug 2023)</a></li>
-                    <li><a href="Notices/Notice 91.pdf" target="_blank">Mediclaim and Term Insurance Policy (Notice 91/2023)(Aug 2023)
+                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-ACCIDENTS%2FAWES%20Policy%20Copy%20with%20letter.pdf?alt=media&token=653bd7a9-a62f-4bcc-b400-e8ef77ba11e6" target="_blank">Group Accident Insurance Cover to Student and Employees(Aug 2023)</a></li>
+                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-ACCIDENTS%2FPolicy%20letter%202023-24.pdf?alt=media&token=e2bc1024-f44a-4c1f-8581-ecab933ed37c" target="_blank">Group Accident Insurance Cover Policy Letter(Aug 2023)</a></li>
+                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-ACCIDENTS%2FNotice%2091.pdf?alt=media&token=148ce75a-34d0-4413-a4bd-4492ef42c11e" target="_blank">Mediclaim and Term Insurance Policy (Notice 91/2023)(Aug 2023)
                         </a></li>
              
                 </ul>
                 <p>Email Poilcy</p>
-                <ul><li><a href="rules/email policy.pdf" target="_blank">SOP: AIT Official Email ID (Aug 2023)</a></li></ul>
+                <ul><li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-EMAIL%2Femail%20policy.pdf?alt=media&token=6ec7cd21-686b-4bae-9641-c266a8bc1ad8" target="_blank">SOP: AIT Official Email ID (Aug 2023)</a></li></ul>
                 <p>Facilities at AIT</p>
-                <ul><li><a href="rules/SOP - Utilisation of HPC.pdf" target="_blank">SOP: Utilization of HPC (Jan 2024)</a></li></ul>
+                <ul><li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-FACILITIES%2FSOP%20-%20Utilisation%20of%20HPC.pdf?alt=media&token=f4becd08-7adf-462b-acec-6f366c24ebc0" target="_blank">SOP: Utilization of HPC (Jan 2024)</a></li></ul>
                 <p>Scholarship</p>
-                <ul> <li><a href="rules/Scholarship/SOP Manjiree-Devinder Scholarship.pdf" target="_blank">SOP For MANJIREE- DEVINDER SINGH Scholarship(Jan 2024)</a></li>
-                    <li><a href="rules/SOP for open Merit.pdf" target="_blank">SOP For Award of Open Merit Scholarship to Students of AIT(Jul 2021)</a></li>
-                      <li><a href="rules/SOP - Merit Cum Means Scholarship.pdf" target="_blank">SOP For Award of Merit cum Means Scholarship to Students of AIT(Jul 2021)</a></li></ul>
+                <ul> <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-SCHOLORSHIP%2FSOP%20Manjiree-Devinder%20Scholarship.pdf?alt=media&token=93828de1-710e-409d-9a0d-a317fff0106f" target="_blank">SOP For MANJIREE- DEVINDER SINGH Scholarship(Jan 2024)</a></li>
+                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-SCHOLORSHIP%2FSOP%20for%20open%20Merit.pdf?alt=media&token=31378538-a5d5-4d1c-961d-7c629ad18ca2" target="_blank">SOP For Award of Open Merit Scholarship to Students of AIT(Jul 2021)</a></li>
+                      <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-SCHOLORSHIP%2FSOP%20-%20Merit%20Cum%20Means%20Scholarship.pdf?alt=media&token=c5715d9c-a589-4770-a665-cba479ba7649" target="_blank">SOP For Award of Merit cum Means Scholarship to Students of AIT(Jul 2021)</a></li></ul>
                       <p>Examination Related</p>
-                      <li><a href="Notices/SOPforexamination.pdf">SOP for Examination </a></li>
-                </u>
+                      <li style=" list-style: square; margin: 16px 30px;"><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-EXAM%2FSOPforexamination.pdf?alt=media&token=b7f57905-c4da-4aea-be14-cdab566f1d46" style="text-decoration: none; color: black; " >SOP for Examination </a></li>
                 <p></p>
             </div>
         </div>
