department data put
putting of department data

--- a/ASGE_HOD_DESk.html
+++ b/ASGE_HOD_DESk.html
@@ -20,7 +20,7 @@
               <div class="header_head">
                 <ul class="header_items">
                     <a href="index.html">Home</a>
-                    <a href="Alumini.html">Alumini</a>
+                    <a href="Alumini.html">Alumni</a>
                     <a href="PLACEMENT_T&P.html">Placements</a>
                     <a href="CLUBS.html">Clubs</a>
                     <a href="ADMIN_AIT.html">Admin</a>
@@ -138,7 +138,7 @@
                         <a href="ASGE_SYLLABUS.html" class="fetchLink" data-elementid="asge_syllabus">Syllabus</a>
                         <a href="ASGE_RESEARCH.html" class="fetchLink" data-elementid="RandD">Research & Development</a>
                         <a href="ASGE_PROJECT.html" class="fetchLink" data-elementid="project">Projects</a>
-                        <a href="ASGE_INDUSTRY.html" class="fetchLink" data-elementid="industrial_visit">Industry institute interaction</a>
+                        <a href="ASGE_INDUSTRY.html" class="fetchLink" data-elementid="industrial_visit" style="font-size: 0.97rem;">Industry Institute Interaction</a>
                         <a href="ASGE_LAB.html" class="fetchLink" data-elementid="lab-section">Laboratories</a>
                     </ul>
                 </section>
