--- a/ASGE_PROJECT.html
+++ b/ASGE_PROJECT.html
@@ -114,7 +114,7 @@
                 </h1>
                 <p style="margin:30px 0px;" class="project_para">Projects of ASGE Department</p>
 
-                <div class="project_lists" style="margin-top: 20px;">
+                <!-- <div class="project_lists" style="margin-top: 20px;">
                     <div class="project_img_topic">
                         <div class="project_img">
                             <img src="Rectangle 61.png">
@@ -146,8 +146,8 @@
                         </span></p>
                         <p>
                             Monitoring and
-conservation system
-Website development
+                            conservation system
+                            Website development
 
                         </p>
                         <div class="project_read_more">
@@ -234,7 +234,7 @@ Website development
                         <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ASGE%2FASGE-PROJECTS%2FProject%20Based%20Learning%20Topic%20List%202022-23.pdf?alt=media&token=79228aa0-8ec9-4f5c-886e-9443ff869c5a" target="_blank">Read More</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 
                 <div class="project_more">
                     <p>Discover For More Innovations</p>
