--- a/ENTC_ACHIEVENT.html
+++ b/ENTC_ACHIEVENT.html
@@ -149,10 +149,18 @@
                 <h2 style="margin-bottom: 40px;">Achievements/ Messages</h2>
 
                 <div class="achievement_contain">
-                    <div class="achievement_box">
-                        <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ENTC%2FENTC_ACHIEVMENT%2FAshok_Award_Snaps.jpg?alt=media&token=b77626d1-c4f7-42e1-addb-55874039c0b1" alt="">
-                        <div class="achievement_box_contain">
-                           <p>Mr. Ashok Katole, Technical Assistant, ETC Dept has been awarded : The GoC in C, South Command Commendation card on the occasion of Army Day (2021-22)</p>
+                    <div class="achievement_mainbox">
+                        <div class="achievement_box">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ENTC%2FENTC_ACHIEVMENT%2FAshok_Award_Snaps.jpg?alt=media&token=b77626d1-c4f7-42e1-addb-55874039c0b1" alt="">
+                            <div class="achievement_box_contain">
+                               <p>Mr. Ashok Katole, Technical Assistant, ETC Dept has been awarded : The GoC in C, South Command Commendation card on the occasion of Army Day (2021-22)</p>
+                            </div>
+                        </div>
+                        <div class="achievement_box">
+                            <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ENTC%2FENTC_ACHIEVMENT%2FAchievement1.jpg?alt=media&token=0225887c-79de-4d3c-89f6-77879222ec57" alt="">
+                            <div class="achievement_box_contain">
+                               <p>Ms Divya Bharti, SE E&TC was awarded the Rolling Trophy for Best Girl student GOC-in-C.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="achievement_container">
@@ -162,12 +170,7 @@
                             <li>Shuvam Kumar, TE E&TC won 1st prize in Great Hackathon '18, Hackerearth.</li>
                         </ul>
                     </div>
-                    <div class="achievement_box">
-                        <img src="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-ENTC%2FENTC_ACHIEVMENT%2FAchievement1.jpg?alt=media&token=0225887c-79de-4d3c-89f6-77879222ec57" alt="">
-                        <div class="achievement_box_contain">
-                           <p>Ms Divya Bharti, SE E&TC was awarded the Rolling Trophy for Best Girl student GOC-in-C.</p>
-                        </div>
-                    </div>
+                   
 
                     
 
