--- a/MECH_DEPT.html
+++ b/MECH_DEPT.html
@@ -128,18 +128,19 @@
                 <ul>
                     <a href="MECH_DEPT.html" class="fetchLink" data-elementid="hod_content" style="border-top: none;">About Department</a>
                     <a href="MECH_HOD_DESk.html" class="fetchLink" data-elementid="hod_content">HOD's Desk</a>
-                    <a href="MECH_FACULTY&STAFF.html" class="fetchLink" data-elementid="faculty_asge">Faculty & staff</a>
-                    <a href="MECH_Roll.html" class="fetchLink" data-elementid="student_roll">Student roll</a>
+                    <a href="MECH_FACULTY&STAFF.html" class="fetchLink" data-elementid="faculty_asge">Faculty & Staff</a>
+                    <a href="MECH_Roll.html" class="fetchLink" data-elementid="student_roll">Student Roll</a>
                     <a href="MECH_TIMETABLE.html" class="fetchLink" data-elementid="timetable">Timetable</a>
-                    <a href="MECH_EXAM.html" class="fetchLink" data-elementid="exam_section">Exam schedule</a>
+                    <a href="MECH_EXAM.html" class="fetchLink" data-elementid="exam_section">Exam Schedule</a>
                     <a href="MECH_RESULT.html" class="fetchLink" data-elementid="result_asge">Result</a>
                     <a href="MECH_ACTIVITIES.html" class="fetchLink" data-elementid="activity_content">Activities</a>
                     <a href="MECH_SPECIAL.html" class="fetchLink" data-elementid="activity_content">Special Services</a>
                     <a href="MECH_SYLLABUS.html" class="fetchLink" data-elementid="asge_syllabus">Syllabus</a>
-                    <a href="MECH_RESEARCH.html" class="fetchLink" data-elementid="RandD">Research & development</a>
+                    <a href="MECH_ACHIEVEMENT" class="fetchLink" data-elementid="timetable">Achievement and Messages</a>
+                    <a href="MECH_RESEARCH.html" class="fetchLink" data-elementid="RandD">Research & Development</a>
                     <a href="MECH_PROJECT.html" class="fetchLink" data-elementid="project">Projects</a>
-                    <a href="MECH_AAC.html" class="fetchLink" data-elementid="timetable">AAC & Dept Meetinge</a>
-                    <a href="MECH_INDUSTRY.html" class="fetchLink" data-elementid="RandD">Industry institute interaction</a>
+                    <a href="MECH_AAC.html" class="fetchLink" data-elementid="timetable">AAC & Dept Meeting</a>
+                    <a href="MECH_INDUSTRY.html" class="fetchLink" data-elementid="RandD" style="font-size: 0.97rem;">Industry Institute Interaction</a>
                     <a href="MECH_LAB.html" class="fetchLink" data-elementid="lab-section">Laboratories</a>
                     <a href="MECH_PLACEMENT.html" class="fetchLink" data-elementid="timetable">Placement record</a>
                 </ul>
