--- a/COMP_DEP.html
+++ b/COMP_DEP.html
@@ -129,21 +129,21 @@
                 <ul>
                     <a href="COMP_DEP.html" class="fetchLink" data-elementid="hod_content" style="border-top: none;">About Department</a>
                     <a href="COMP_HOD_DESk.html" class="fetchLink" data-elementid="hod_content">HOD's Desk</a>
-                    <a href="COMP_FACULTY&STAFF.html" class="fetchLink" data-elementid="faculty_asge">Faculty & staff</a>
-                    <a href="COMP_Roll.html" class="fetchLink" data-elementid="student_roll">Student roll</a>
+                    <a href="COMP_FACULTY&STAFF.html" class="fetchLink" data-elementid="faculty_asge">Faculty & Staff</a>
+                    <a href="COMP_Roll.html" class="fetchLink" data-elementid="student_roll">Student Roll</a>
                     <a href="COMP_TIMETABLE.html" class="fetchLink" data-elementid="timetable">Timetable</a>
-                    <a href="COMP_EXAM.html" class="fetchLink" data-elementid="exam_section">Exam schedule</a>
+                    <a href="COMP_EXAM.html" class="fetchLink" data-elementid="exam_section">Exam Schedule</a>
                     <a href="COMP_RESULT.html" class="fetchLink" data-elementid="result_asge">Result</a>
                     <a href="COMP_ACTIVITIES.html" class="fetchLink" data-elementid="RandD">Activities</a>
                     <a href="COMP_NOTICES.html" class="fetchLink" data-elementid="Notices">Notices</a>
                     <a href="COMP_ACHIEVEMENT.html" class="fetchLink" data-elementid="timetable">Achievements/ Messages</a>
                     <a href="COMP_SYLLABUS.html" class="fetchLink" data-elementid="asge_syllabus">Syllabus</a>
-                    <a href="COMP_RESEARCH.html" class="fetchLink" data-elementid="RandD">Research & development</a>
+                    <a href="COMP_RESEARCH.html" class="fetchLink" data-elementid="RandD">Research & Development</a>
                     <a href="COMP_PROJECT.html" class="fetchLink" data-elementid="project">Projects</a>
-                    <a href="COMP_INDUSTRY.html" class="fetchLink" data-elementid="RandD">Industry institute interaction</a>
+                    <a href="COMP_INDUSTRY.html" class="fetchLink" data-elementid="RandD" style="font-size: 0.97rem;">Industry Institute Interaction</a>
                     <a href="COMP_LAB.html" class="fetchLink" data-elementid="lab-section">Laboratories</a>
                     <a href="COMP_AAC.html" class="fetchLink" data-elementid="timetable">AAC & Dept Meeting</a>
-                    <a href="COMP_PLACEMENT.html" class="fetchLink" data-elementid="timetable">Placement record</a>
+                    <a href="COMP_PLACEMENT.html" class="fetchLink" data-elementid="timetable">Placement Record</a>
                     <a href="COMP_MAGZINE.html" class="fetchLink" data-elementid="timetable">E-Magazine</a>
                 </ul>
             </section>
