--- a/IT_DEPARTMENT.html
+++ b/IT_DEPARTMENT.html
@@ -130,7 +130,7 @@
                     <a href="IT_DEPARTMENT.html" class="fetchLink" data-elementid="hod_content" style="border-top: none;">About Department</a>
                     <a href="IT_HOD_DESk.html" class="fetchLink" data-elementid="hod_content">HOD's Desk</a>
                     <a href="IT_FACULTY&STAFF.html" class="fetchLink" data-elementid="faculty_asge">Faculty & Staff</a>
-                    <a href="IT_Roll.html" class="fetchLink" data-elementid="student_roll">Student roll & Counselor</a>
+                    <a href="IT_Roll.html" class="fetchLink" data-elementid="student_roll">Student Roll & Counselor</a>
                     <a href="IT_TIMETABLE.html" class="fetchLink" data-elementid="timetable">Timetable</a>
                     <a href="IT_EXAM.html" class="fetchLink" data-elementid="exam_section">Exam Schedule</a>
                     <a href="IT_RESULT.html" class="fetchLink" data-elementid="result_asge">Result</a>
