--- a/MECH_PROJECT.html
+++ b/MECH_PROJECT.html
@@ -114,7 +114,7 @@
                 </h1>
                 <p style="margin-top: 30px; margin-bottom: 20px;" class="project_para">Projects of Mechanical Department Students.</p>
 
-                <div class="project_lists" style="margin-top: 20px;">
+                <!-- <div class="project_lists" style="margin-top: 20px;">
                     <div class="project_img_topic">
                         <div class="project_img">
                             <img src="Rectangle 61.png">
@@ -219,7 +219,7 @@
                         <a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-MECH%2FMECH-PROJECTS%2FProject%20list%202021-22.pdf?alt=media&token=3380fcee-b0e4-41c1-914b-0dd30a96cdfa" target="_blank">Read More</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 
                 <div class="project_more">
                     <p style="color: #4C6BF1;">Discover For More Innovations</p>
