--- a/mandatory/ffa.html
+++ b/mandatory/ffa.html
@@ -34,7 +34,7 @@
                     <li><a href="Notices/bestoutgoingstudent.pdf" target="_blank">Application Format for COAS All-round Best Outgoing Student</a></li>
                     
                     
-                    <li><a href="Notices/promotion.pdf" target="_blank">Application Format for the Incentives / Promotion (Non-teaching/Support Staff/Clerical Staff)</a></li>
+                    <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MADATORY-FORMS%2FALL-FORMS%2Fpromotion.pdf?alt=media&token=2d900412-51ef-472f-aa2e-85032e7fbca6" target="_blank">Application Format for the Incentives / Promotion (Non-teaching/Support Staff/Clerical Staff)</a></li>
                 </ul>
             </div>
         </div>
