--- a/mandatory/res.html
+++ b/mandatory/res.html
@@ -43,7 +43,7 @@
                     <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-CERIFICATES%2F2016%20NAAC%20Certificate%20Nov%202016.pdf?alt=media&token=55674ddb-295b-4b2b-be09-19138a295447" target="_blank">National Assessment and Accreditation Council (Yr 2016)</a></li>
                     
                     <li><a href="https://firebasestorage.googleapis.com/v0/b/ait-website-81159.appspot.com/o/AIT-IMPORTANT-LINKS%2FAIT-MANDATORY%2FAIT-MANDATORY-CERIFICATES%2Fiso2015.pdf?alt=media&token=0cc5316b-777d-4027-9f28-e14544b459dd" target="_blank">ISO Certificate(2015) valid upto Feb 2018</a></li>
-                    <li><a href="https://www.aitpune.com/AICTE-Approved-Reports.aspx" target="_blank">AICTE Ext of Approval Reports </a></li>
+                    <li><a href="AICTE.html" target="_blank">AICTE Ext of Approval Reports </a></li>
                     <li><a href="MHRD.html" target="_blank">MHRD IIC Certificate </a></li>
                </ol>
                 <p>Forms for Downloading</p>
